--- a/careers.html
+++ b/careers.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/logo.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -43,11 +43,11 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero">Home<br></a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="careers.html" class="active">Career</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="./index.html">Home<br></a></li>
+          <li><a href="./index.html">About</a></li>
+          <li><a href="./index.html">Services</a></li>
+          <li><a href="./careers.html" class="active">Career</a></li>
+          <li><a href="./index.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -66,7 +66,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Career</h1>
-              <p class="mb-0">Careers for all who interested</p>
+              <p class="mb-0">Bring Your Talent to a Growing Team of Innovators!</p>
             </div>
           </div>
         </div>
@@ -86,12 +86,12 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Starter Section</h2>
-        <p>Check Starter Section<br></p>
+        <h2>Careers</h2>
+        <p>Check out our careers<br></p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
-        <p>Use this page as a starter for your own custom pages.</p>
+        <p>Contact us, if you are interested.</p>
       </div>
 
     </section><!-- /Starter Section Section -->
