--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <section id="contact" class="contact section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up" data-aos-delay="100">
+      <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
         <p>Contact Us</p>
       </div><!-- End Section Title -->
@@ -343,7 +343,7 @@
 
           <div class="col-lg-4">
 
-            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="100">
+            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
@@ -351,7 +351,7 @@
               </div>
             </div><!-- End Info Item -->
 
-            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="100">
+            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
